chore: eval iteration 5 fixes
